--- a/u24634400_INF272_Prac2.csproj
+++ b/u24634400_INF272_Prac2.csproj
@@ -151,6 +151,17 @@
     <Content Include="Content\Site.css" />
     <Content Include="HTML\Boitshoko.html" />
     <Content Include="HTML\Gundo.html" />
+    <Content Include="HTML\Images\Anthony-Mackie-Captain-America-4.jpg" />
+    <Content Include="HTML\Images\antman-and-the-wasp-marvel-4.jpg" />
+    <Content Include="HTML\Images\Dancing.jpeg" />
+    <Content Include="HTML\Images\Football.jpeg" />
+    <Content Include="HTML\Images\Gaming.jpg" />
+    <Content Include="HTML\Images\hawkeye.jpg" />
+    <Content Include="HTML\Images\professional-pool-table.jpg" />
+    <Content Include="HTML\Images\Reading.jpg" />
+    <Content Include="HTML\Images\The-Incredible-Hulk.jpg" />
+    <Content Include="HTML\Images\thor-lightning.jpg" />
+    <Content Include="HTML\Images\tony-stark-iron-man.jpg" />
     <Content Include="HTML\Msizi.html" />
     <Content Include="HTML\Nhlanhla.html" />
     <Content Include="HTML\Ritshidze.html" />
@@ -160,18 +171,6 @@
     <Content Include="Scripts\bootstrap.esm.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="HTML\Images\Anthony-Mackie-Captain-America-4.webp" />
-    <Content Include="HTML\Images\antman-and-the-wasp-marvel-4.webp" />
-    <Content Include="HTML\Images\black-widow-1.webp" />
-    <Content Include="HTML\Images\Don-cheadle-as-rhodey-Cropped.webp" />
-    <Content Include="HTML\Images\hawkeye.webp" />
-    <Content Include="HTML\Images\peter-parker-Cropped.webp" />
-    <Content Include="HTML\Images\steve-rogers.webp" />
-    <Content Include="HTML\Images\The-Incredible-Hulk.webp" />
-    <Content Include="HTML\Images\thor-lightning.webp" />
-    <Content Include="HTML\Images\tony-stark-iron-man.webp" />
-    <Content Include="HTML\Images\Vision-Civil-War-Cropped.webp" />
-    <Content Include="HTML\Images\Wanda-Scarlet-Witch-Cropped.webp" />
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
     <Content Include="Scripts\jquery-3.7.0.min.js" />
