--- a/u24634400_INF272_Prac4.csproj
+++ b/u24634400_INF272_Prac4.csproj
@@ -199,6 +199,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\People\StudyGroupView.cshtml" />
+    <Content Include="Views\People\CreatePeopleView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
